--- a/BP/manifest.json
+++ b/BP/manifest.json
@@ -2,22 +2,22 @@
     "format_version": 2,
     "header": {
         "name": "Valkyrie Origins BP",
-        "description": "VERSION 1.3 - SNEAK-TO-LEAP. Standalone project.",
+        "description": "V1.4 - LOOK UP & JUMP TO FLY. *** MANDATORY: TURN ON BETA APIs IN SETTINGS! ***",
         "uuid": "43912178-0000-0000-0000-000000000000",
-        "version": [1, 3, 0],
+        "version": [1, 4, 0],
         "min_engine_version": [1, 20, 0]
     },
     "modules": [
         {
             "type": "data",
             "uuid": "43912178-0000-0000-0000-000000000001",
-            "version": [1, 3, 0]
+            "version": [1, 4, 0]
         }
     ],
     "dependencies": [
         {
             "uuid": "43912178-0000-0000-0000-000000000002",
-            "version": [1, 3, 0]
+            "version": [1, 4, 0]
         }
     ],
     "capabilities": ["script_v1_beta"]
